--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,27 @@
 {
-    "editor.tokenColorCustomizations": {
-      "textMateRules": [
-        {
-          "scope": "comment",
-          "settings": {
-            "foreground": "#24ffd0", // Replace with any color you like #24ffd0 or #24ffaf or  #79d1b1
-            "fontStyle": "italic"     // Optional: can be "italic", "bold", etc.
-          }
-        },
-        // {
-        //   "scope": "keyword",
-        //   "settings": {
-        //     "foreground": "#ff24a1", // Replace with any color you like #ff24a1 or  #ff79d1
-        //     "fontStyle": "bold"     // Optional: can be "italic", "bold", etc.
-        //   }
-        // },
-        {
-          "scope": "variable",
-          "settings": {
-            "foreground": "#24a1ff" // Replace with any color you like #24a1ff or  #79d1ff or #ab00da
-            //"fontStyle": "underline"     // Optional: can be "italic", "bold", etc.
-          }
+  "editor.tokenColorCustomizations": {
+    "textMateRules": [
+      {
+        "scope": "comment",
+        "settings": {
+          "foreground": "#24ffaf", // Replace with any color you like #24ffd0 or #24ffaf or  #79d1b1
+          "fontStyle": "italic"     // Optional: can be "italic", "bold", etc.
         }
-      ]
-    }
-    }
+      },
+      // {
+      //   "scope": "keyword",
+      //   "settings": {
+      //     "foreground": "#ff24a1", // Replace with any color you like #ff24a1 or  #ff79d1
+      //     "fontStyle": "bold"     // Optional: can be "italic", "bold", etc.
+      //   }
+      // },
+      {
+        "scope": "variable",
+        "settings": {
+          //"foreground": "#24a1ff" // Replace with any color you like #24a1ff or  #79d1ff or #ab00da
+          //"fontStyle": "underline"     // Optional: can be "italic", "bold", etc.
+        }
+      }
+    ]
+  }
+  }
