--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ coco.names
 testyolo.py
 yolov3.cfg
 yolov3.weights
+Cooperative_Saliency-Based_Pothole_Detection_and_AR_Rendering_for_Increased_Situational_Awareness.pdf
