--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ testyolo.py
 yolov3.cfg
 yolov3.weights
 Cooperative_Saliency-Based_Pothole_Detection_and_AR_Rendering_for_Increased_Situational_Awareness.pdf
+/PART_B/alt_approach
