--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ yolov3.cfg
 yolov3.weights
 Cooperative_Saliency-Based_Pothole_Detection_and_AR_Rendering_for_Increased_Situational_Awareness.pdf
 /PART_B/alt_approach
+/PART_B/spatial_context_approach
+/PART_B/sidewalk
