--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Cooperative_Saliency-Based_Pothole_Detection_and_AR_Rendering_for_Increased_Situ
 /PART_B/B1B2_improved
 /PART_B/enhanced_detection
 PART_B/__pycache__/classigy.cpython-311.pyc
+/PART_B/B1B2clean
