--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ PART_B/__pycache__/classigy.cpython-311.pyc
 /PART_B/tests/B1B2_improved
 /PART_B/tests/enhanced_detection
 /PART_B/tests/sidewalk_removal
+/PART_B/pointnet_lib
