--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ PART_B/__pycache__/classigy.cpython-311.pyc
 /PART_B/tests/enhanced_detection
 /PART_B/tests/sidewalk_removal
 /PART_B/pointnet_lib
+/PART_B/B1B2B3
