CLEAN UP part a

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,15 @@
-lane_results/*.png
-road_results/*.png
-hardtester/*.png
-__pycache__/*
-settings.json
-.vscode/settings.json
-.vscode/settings.json
-coco.names
-testyolo.py
-yolov3.cfg
-yolov3.weights
-Cooperative_Saliency-Based_Pothole_Detection_and_AR_Rendering_for_Increased_Situational_Awareness.pdf
 /PART_B/alt_approach
-/PART_B/sidewalk
-/PART_B/B1B2
-/PART_B/sidewalk_removal
-/PART_B/sidewalkv3
-/pointnet_lib
-/PART_B/B1B2_improved
-/PART_B/enhanced_detection
-PART_B/__pycache__/classigy.cpython-311.pyc
-/PART_B/B1B2clean
-/PART_B/tests/alt_approach
-/PART_B/tests/sidewalk
-/PART_B/tests/sidewalkv3
-/PART_B/tests/B1B2_improved
-/PART_B/tests/enhanced_detection
-/PART_B/tests/sidewalk_removal
-/PART_B/pointnet_lib
+/road_results
 /PART_B/B1B2B3
+/hardtester
+/documents
+/lane_results
+PART_B/.vscode/settings.json
+__pycache__/road_detector_A1.cpython-312.pyc
+__pycache__/obstacle_detection_cv_A2.cpython-312.pyc
+PART_A/version2_dbsacan_yolo/coco.names
+PART_A/version2_dbsacan_yolo/yolov3.weights
+PART_A/version2_dbsacan_yolo/yolov3.cfg
+PART_A/version1_colorspace_cv/__pycache__/obstacle_detection_cv_A2.cpython-312.pyc
+PART_A/version1_colorspace_cv/obstacle_detection_cv_A2.py
+PART_A/version1_colorspace_cv/__pycache__/road_detector_A1.cpython-312.pyc
