update organise part_b

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ PART_A/version2_dbsacan_yolo/yolov3.cfg
 PART_A/version1_colorspace_cv/__pycache__/obstacle_detection_cv_A2.cpython-312.pyc
 PART_A/version1_colorspace_cv/obstacle_detection_cv_A2.py
 PART_A/version1_colorspace_cv/__pycache__/road_detector_A1.cpython-312.pyc
+~$port_LIDAR_camer_up1096060.docx
+~$port_LIDAR_camer_up1096060.docx
+~$port_LIDAR_camer_up1096060.docx
