--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ PART_A/version1_colorspace_cv/__pycache__/road_detector_A1.cpython-312.pyc
 ~$port_LIDAR_camer_up1096060.docx
 ~$port_LIDAR_camer_up1096060.docx
 ~$port_LIDAR_camer_up1096060.docx
+PART_A/stereoVersion/yolov3.cfg
+PART_A/stereoVersion/yolov3.weights
+*.pyc
+PART_A/stereoVersion/coco.names
+PART_A/stereoVersion/output_video_16fps.avi
+*.avi
