--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ report_LIDAR_camera_up1096060v1.pdf
 /PART_B/lane_results
 /PART_B/B1B2
 /PART_B/prototypes
+/PART_A/oneCamera/testing
+/PART_A/oneCamera/testing_
+/PART_B/prototypes_oldversions
+/PART_A/stereoVersion/testing_
